tests/baselines/reference/generatorTypeCheck60.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck60.ts(2,21): error TS2507: Base expression is not of a constructor function type.
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck60.ts(2,22): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck60.ts (2 errors) ====
    function* g() {
        class C extends (yield) {};
                        ~~~~~~~
!!! error TS2507: Base expression is not of a constructor function type.
                         ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
    }